Fix Dark Mode
Fix Dark Mode

--- a/style.css
+++ b/style.css
@@ -195,12 +195,12 @@ button {
   margin: 0;
 }
 
-html.no-bg, html.no-bg body {
+html.no-bg {
   background-image: none !important;
   background-color: #2e3440;
 }
 
-.light-mode, .light-mode body {
+.light-mode {
   background-color: #ffffff !important;
   color: #2E3440;
 }
@@ -210,8 +210,10 @@ html.no-bg, html.no-bg body {
 .light-mode h2, 
 .light-mode h3, 
 .light-mode h4, 
+.light-mode h5,
 .light-mode h6,
-.light-mode li {
+.light-mode li,
+.light-mode .setting-item {
   color: #2E3440;
 }
 
